--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,11 @@ mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
 mapping_version=2023.09.03-1.20.1
+
+
+## Dependency Properties
+jei_version=15.8.2.26
+
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=kermittech
@@ -38,7 +43,7 @@ mod_name=KermitTech
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU GPL 3.0
 # The mod version. See https://semver.org/
-mod_version=0.1.2-ALPHA-1.20.1
+mod_version=0.2-ALPHA-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
